# scriptup

./: .gitignore  Cargo.toml  README.ja.md  README.md  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
.github/workflows/: release.yml
src/: index.ts  lts.rs  main.rs  manifest.rs  manual.rs  preview.rs  stable.rs  utils.rs
src/commands/: build.ts  init.ts  lts.ts  manual.ts  new.ts  preview.ts  stable.ts
src/utils/: dependency-checker.ts  logger.ts  manifest.ts  package-manager.ts  scaffold.ts  username.ts  versions.ts
