[package]
name = "scriptup"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to manage ScriptAPI versions"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.3"
jsonxf = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
